# voxel-raytracing

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: conan.cmake  werror.cmake
docs/: engineclass.puml  generalsequence.puml  rendergraph.puml  renderpasses.puml  resourceclass.puml  voxelrenderer.puml
resource/: CMakeLists.txt  floatingcolored.vox  mandlebulb.vox  rustig_koppie.hdr  treehouse.vox
run/: CMakeLists.txt  main.cpp
shader/: CMakeLists.txt  blit.frag  denoiser.frag  screen_quad.vert  test.vert  triangle.frag  triangle.vert  voxel_sdf_toy.frag  voxel_volume.frag
source/: CMakeLists.txt  app.cpp  pch.hpp
source/demo/: screen_quad_push.hpp  triangle_pipeline.cpp  triangle_pipeline.hpp  triangle_renderer.cpp  triangle_renderer.hpp  voxel_sdf_pipeline.cpp  voxel_sdf_pipeline.hpp  voxel_sdf_renderer.cpp  voxel_sdf_renderer.hpp
source/engine/: debug_marker.cpp  debug_marker.hpp  deletion_queue.cpp  deletion_queue.hpp  descriptor_set.cpp  descriptor_set.hpp  engine.cpp  engine.hpp  input_callbacks.cpp  input_callbacks.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_storage.hpp  recreation_queue.cpp  recreation_queue.hpp  renderer.cpp  renderer.hpp  resource.cpp  resource.hpp  resource_builder.hpp  shader_module.cpp  shader_module.hpp  swapchain.cpp  swapchain.hpp
source/engine/commands/: command_util.cpp  command_util.hpp
source/engine/gui/: imgui_renderer.cpp  imgui_renderer.hpp
source/engine/pipeline/: descriptor_set.cpp  descriptor_set.hpp  framebuffer.cpp  framebuffer.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp
source/engine/resource/: buffer.cpp  buffer.hpp  render_image.cpp  render_image.hpp  shader_module.cpp  shader_module.hpp  texture_2d.cpp  texture_2d.hpp  texture_3d.cpp  texture_3d.hpp
source/util/: bidirectional_event_queue.cpp  bidirectional_event_queue.hpp  deletion_queue.cpp  deletion_queue.hpp  id_generator.cpp  id_generator.hpp  resource_ring.hpp
source/voxels/: blit_pipeline.cpp  blur_denoiser.cpp  blur_denoiser.hpp  camera_controller.cpp  camera_controller.hpp  denoiser_pipeline.cpp  material.hpp  screen_quad_push.hpp  voxel_performance_gui.cpp  voxel_performance_gui.hpp  voxel_render_settings.hpp  voxel_render_stage.hpp  voxel_renderer.cpp  voxel_renderer.hpp  voxel_scene.cpp  voxel_scene.hpp  voxel_sdf_pipeline.cpp  voxel_sdf_pipeline.hpp  voxel_sdf_renderer.cpp  voxel_sdf_renderer.hpp  voxel_settings_gui.cpp  voxel_settings_gui.hpp
source/voxels/fsr/: fsr2_scaler.cpp  fsr2_scaler.hpp
source/voxels/pipeline/: blit_pipeline.cpp  blit_pipeline.hpp  denoiser_pipeline.cpp  denoiser_pipeline.hpp  voxel_sdf_pipeline.cpp
source/voxels/resource/: material.hpp  parameters.hpp  screen_quad_push.hpp  voxel_render_settings.cpp  voxel_render_settings.hpp  voxel_scene.cpp  voxel_scene.hpp
source/voxels/stages/: blit_stage.cpp  blit_stage.hpp  denoiser_stage.cpp  denoiser_stage.hpp  geometry_stage.cpp  geometry_stage.hpp  upscaler_stage.cpp  upscaler_stage.hpp
test/: CMakeLists.txt  test_test.cpp
